# ai-telegram

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml
.github/workflows/: deploy.yml
src/bot/: handlers.py  messages.py
src/config/: settings.py
src/graph/: nodes.py  state.py  workflow.py
src/models/: expense.py
src/services/: extraction.py  organizze.py  transcription.py
