[project]
name = "ai-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "langchain>=1.0.5",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "openai>=2.7.2",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
